Pack ResourceError harder. <https://webkit.org/b/126969>

Re-arrange the members of ResourceError to reduce padding,
shrinking it by 8 bytes.

Reviewed by Antti Koivisto.

* platform/network/ResourceErrorBase.h:
(WebCore::ResourceErrorBase::ResourceErrorBase):


Canonical link: https://commits.webkit.org/144944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161955 268f45cc-cd09-0410-ab3c-d52691b4dbfc