Source/WebCore/platform/network/ResourceErrorBase.h
@@ -65,9 +65,9 @@ protected:
 
     ResourceErrorBase(const String& domain, int errorCode, const String& failingURL, const String& localizedDescription)
         : m_domain(domain)
-        , m_errorCode(errorCode)
         , m_failingURL(failingURL)
         , m_localizedDescription(localizedDescription)
+        , m_errorCode(errorCode)
         , m_isNull(false)
         , m_isCancellation(false)
         , m_isTimeout(false)
@@ -86,12 +86,12 @@ protected:
     static bool platformCompare(const ResourceError&, const ResourceError&) { return true; }
 
     String m_domain;
-    int m_errorCode;
     String m_failingURL;
     String m_localizedDescription;
-    bool m_isNull;
-    bool m_isCancellation;
-    bool m_isTimeout;
+    int m_errorCode;
+    bool m_isNull : 1;
+    bool m_isCancellation : 1;
+    bool m_isTimeout : 1;
 };
 
 inline bool operator==(const ResourceError& a, const ResourceError& b) { return ResourceErrorBase::compare(a, b); }
